response entities